# unbiases-area-estimator

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  config.json  demo.ipynb  overview.ipynb  pyproject.toml  raster_handling.py  requirements.txt  run.py  run_analysis.ipynb  run_sampling_design.ipynb  sampling_allocation.py  test.ipynb  unbiased_estimation.py
ignorefolder/: test.ipynb
src/unbiased_area_estimation/: analysis.py  config.py  preprocess.py  raster_handling.py  region.py  sample_allocation.py  sampling.py  sampling_allocation.py  sampling_design.py  storage_manager.py  unbiased_estimation.py  utils.py
